lifecycle hooks and template access

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,14 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" 
+              (click)="onChangeFirst()">Change first element</button>
+      <button class="btn btn-danger" 
+              (click)="onDestroyFirst()">Destroy first element</button>
       <app-server-element 
         *ngFor="let serverElement of serverElements"
-        [server]="serverElement">
-          <p>
+        [server]="serverElement" [name]="serverElement.name">
+          <p #contentParagraph>
             <strong *ngIf="serverElement.type === 'server'" 
             style="color: red">{{ serverElement.content }}</strong>
              <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
